# nanotorch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/: settings.local.json
memory/: MEMORY.md  project_nanotorch_scope.md
scripts/: mvp_mlp.py  mvp_mlp_cuda.py  profile_ops.py  tmp.py  train_mlp_basic.py  unary_func_speed.py
src/cpp/: _C.cpp  allocator.cpp  allocator.h  cuda.cpp  cuda.cuh  cuda.h  dtype.h  factory.cpp  factory.cu  factory.h  helpers.h  ops.cpp  ops.h  random.h  storage.cpp  storage.h  tensor_view.cuh  tensor_view.h  unreachable.h
src/cpp/cuda/: binary_ops.cu  binary_ops.h  cuda.cuh  cuda.h  unary_ops.cu  unary_ops.h
src/cpp/ops/: binary_ops.cu  binary_ops.h  copy_ops.cu  copy_ops.h  cuda.cpp  cuda.cuh  cuda.h  inplace_ops.cu  inplace_ops.h  matmul.cu  matmul.h  ops.cpp  ops.cu  ops.h  reduction_ops.cu  reduction_ops.h  unary_ops.cu  unary_ops.h
src/nanotorch/: _C.pyi  __init__.py  _data_type.py  _device.py  _indexing.py  core.py  cuda.py  factories.py  ops.py  tensor.py  testing.py
src/nanotorch/autograd/: __init__.py  function.py  grad_mode.py  ops.py  ops_binary.py  ops_reduction.py  ops_spec.py  ops_special.py  ops_unary.py  ops_utils.py
src/nanotorch/nn/: __init__.py  module.py  optimizers.py
tests/: conftest.py  test_autograd.py  test_cpp_C.py  test_factories.py  test_tensor.py  test_tensor_core.py  test_tensor_core_ops.py  test_tensor_ops.py
tests/test_ops/: test_tensor_binary_ops.py  test_tensor_core.py  test_tensor_core_ops.py  test_tensor_inplace_ops.py  test_tensor_reduction_ops.py  test_tensor_unary_ops.py
