[project]
name = "nanotorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Risitop", email = "aziz.fouche@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.scripts]
nanotorch = "nanotorch:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
