[project]
name = "nanotorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Risitop", email = "aziz.fouche@gmail.com" }
]
requires-python = ">=3.11"

[project.scripts]
nanotorch = "nanotorch:main"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/nanotorch"]
cmake.version = ">=3.15"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "pybind11>=3.0.3",
    "ruff>=0.15.12",
]
