[project]
name = "nanotorch"
version = "0.1.0"
description = "A minimal PyTorch clone."
readme = "README.md"
authors = [{ name = "Aziz F.", email = "aziz.fouche@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["tqdm>=4.67.3"]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/nanotorch"]
cmake.version = ">=3.15"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "pybind11>=3.0.3",
    "ruff>=0.15.12",
    "snakeviz>=2.2.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
